# packages/backend/src/modules/board/models/dto/apply-decision.request.dto.ts
@@ -1,45 +1,7 @@
-import { Type } from "class-transformer"
-import {
-  IsArray,
-  IsEnum,
-  IsOptional,
-  IsString,
-  ValidateNested,
-} from "class-validator"
-import { ModerationReason } from "src/modules/board/models/dto/post-decision.dto"
+import { OmitType } from "@nestjs/swagger"
+import { PostAppliedDecision } from "src/modules/board/models/post-applied-decision"
 
-export class ApplyModerationDecision {
-  @IsEnum(ModerationReason)
-  @IsOptional()
-  reason?: ModerationReason
-}
-
-export class ApplyDuplicatePostsDecision {
-  @IsString()
-  @IsOptional()
-  duplicatePostExternalId?: string
-}
-
-export class ApplyTagAssignmentDecision {
-  @IsArray()
-  @IsString({ each: true })
-  @IsOptional()
-  tagIds?: string[]
-}
-
-export class ApplyDecisionRequestDto {
-  @ValidateNested()
-  @Type(() => ApplyModerationDecision)
-  @IsOptional()
-  moderation?: ApplyModerationDecision
-
-  @ValidateNested()
-  @Type(() => ApplyDuplicatePostsDecision)
-  @IsOptional()
-  duplicatePosts?: ApplyDuplicatePostsDecision
-
-  @ValidateNested()
-  @Type(() => ApplyTagAssignmentDecision)
-  @IsOptional()
-  tagAssignment?: ApplyTagAssignmentDecision
-}
+export class ApplyDecisionRequestDto extends OmitType(
+  PostAppliedDecision,
+  [] as const,
+) {}
